hphp/hack/test/typecheck/unsafe_cast/ignored/non_string_literal_ignored.php.exp
File "non_string_literal_ignored.php", line 5, characters 40-43:
This argument must be a literal format string (Typing[4027])
File "non_string_literal_ignored.php", line 5, characters 40-43:
Invalid argument (Typing[4110])
  File "soundness.hhi", line 33, characters 4-28:
  Expected `HH\FormatString<nothing>`
  File "non_string_literal_ignored.php", line 4, characters 10-16:
  But got `string`
File "non_string_literal_ignored.php", line 3, characters 10-10:
Invalid return type (Typing[4336])
  File "non_string_literal_ignored.php", line 3, characters 15-17:
  Expected `int`
  File "non_string_literal_ignored.php", line 3, characters 10-10:
  But got `void` because this function does not always return a value
