hphp/hack/test/typecheck/unsafe_cast/ignored/non_string_literal_ignored.php
<?hh

function m(): int {
  $msg = 'wrong';
  \HH\FIXME\UNSAFE_CAST<bool,int>(true,$msg);
}
